# pennStateAdvisor

./: pyproject.toml
crawler/: crawler_main.py  data_cleaner.py  psu_major_requirements_crawler.py  psu_majors_crawler.py  psu_undergrad_course_crawler.py
crawler/sources/: url_sources.py
psu_advisor/: db.sqlite3  manage.py
psu_advisor/psu_advisor/: asgi.py  settings.py  urls.py  wsgi.py
vector_store/: manage.py
