[tool.poetry]
name = "pennstateadvisor"
version = "0.1.0"
description = ""
authors = ["Aaron Feinberg <afeinberg35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "^0.5.18"
langchain = "^0.3.7"
sentence-transformers = "^3.3.0"
scikit-learn = "^1.5.2"
Django = "^5.1.3"
pandas = "^2.2.3"
pydantic = "^2.9.2"
faiss-cpu = "^1.9.0"
elasticsearch = "^8.16.0"
django-haystack = "^3.3.0"
openai = "^1.54.4"
regex = "^2024.11.6"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
